crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task__graphs.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(node:20.0.0)" ]
    2 [ label="InstallWorkspaceDeps(node:20.0.0)" ]
    3 [ label="SyncProject(bar)" ]
    4 [ label="RunTask(bar:build)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 0 [ ]
    4 -> 2 [ ]
    4 -> 3 [ ]
}
