crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task__task_can_have_a_diff_toolchain_from_project.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(rust:1.70.0)" ]
    2 [ label="InstallProjectDeps(rust:1.70.0, bar)" ]
    3 [ label="SyncProject(bar)" ]
    4 [ label="RunTask(bar:build)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 0 [ ]
    4 -> 2 [ ]
    4 -> 3 [ ]
}
